chore: add global stylesheet and FormField component

--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,87 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  font-family: sans-serif;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --color-background: #e3e3e3;
+  --color-springload-green: #0dad59;
+  --color-green-hover: #0fc565;
+  --color-secondary: #666;
+  --color-secondary-hover: #888;
+  --color-white: #fff;
+  --color-error: red;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  --font-size-lg: 1.5rem;
+  --font-size-base: 1rem;
+  --font-size-sm: 0.875rem;
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  --spacing-xl: 2.5rem;
+  --spacing-lg: 1.5rem;
+  --spacing-md: 1rem;
+  --spacing-sm: 0.5rem;
+  --spacing-xs: 0.25rem;
+
+  --border-radius: 0.25rem;
+  --border-width: 1.5px;
 }
 
 body {
-  margin: 0;
+  background-color: var(--color-background);
+  padding: 2rem;
+}
+
+.error {
+  color: var(--color-error);
+  font-size: var(--font-size-sm);
+  margin: 0 var(--spacing-xs) 0 0;
+  min-height: var(--font-size-lg)
+}
+
+input[aria-invalid="true"] {
+  border-color: var(--color-error) !important;
+}
+
+form {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  gap: var(--spacing-sm);
+  max-width: 400px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+label {
+  display: block;
+  margin-bottom: var(--spacing-xs);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.select-field {
+  box-sizing: border-box;
+  font-size: var(--font-size-base);
+  margin-bottom: var(--spacing-sm);
+  width: 100%;
+}
+
+fieldset {
+  border: var(--border-width) solid var(--color-secondary);
+  border-radius: var(--border-radius);
+  padding: var(--spacing-sm);
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+  width: 1.5rem;
+  height: 2rem;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  accent-color: var(--color-springload-green);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+label {
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-sm);
+  cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  body {
+    padding: var(--spacing-sm);
+    margin: 0;
   }
 }
